CLEANING, FIX, STYLING - Moved close button styling to carpe.scss so that the shortcuts box wouldn't be broken on the homepage

--- a/app/assets/stylesheets/carpe.scss
+++ b/app/assets/stylesheets/carpe.scss
@@ -546,6 +546,22 @@ form.thin
 	z-index: 1001;
 	padding-bottom: 20px;
 }
+.overlay-box .default.red.close
+{
+	position: absolute;
+	top: 5px;
+	right: 5px;
+	width: 22px;
+	height: 22px;
+	padding: 2px 1px 2px 3px;
+	border-radius: 50px;
+	text-align: center;
+	background-image: image-url("closeThick-wht.svg");
+	background-repeat: no-repeat;
+	background-size: 60%;
+    background-position: 50%;
+	border: solid 2px white;
+}
 #overlay-confirm .default, #overlay-alert .default {
 	width: 100px;
 	margin-right: 10px;
